static/styles.css
/* global stylings ______________________________________________________________________________ */
body, html {
    height: 100%;
    width: 100%;
    margin: 0;
    padding: 0;
}

h1 { 
    color: tan;
}

.content-container{
    width: 98%;
    height: 80%;
    /* background-color: wheat; */
    margin: 1%;
}

a, a:visited {
    color: peru;
}

a:hover {
    color: tan;
    transform: scale(1.1);
}

a:active {
    transform: scale(0.95)
}


/* nav styling ______________________________________________________________________________ */
/* add nav styling here at some point, like hover links and on click and once clicked */
.nav {
    align-content: center;
    width: 100vw;
    height: 5%;
    background-color: transparent;
    display: grid;
    grid-template-columns: 30% 40% 30%;
}

.nav-center {
    justify-self: center;
    display: flex;
    gap: 30px;
}

.nav a, .nav a:visited {
    display: inline-block;
    text-decoration: none;
    color: tan;
    /* transition: transform 0.1s, color 0.1s; */
}

.nav a:hover {
    color: peru;
    transform: scale(1.1); 
}

.nav a:active{
    color: peru;
    transform: scale(0.95);
}

/* button styling ______________________________________________________________________________ */
.button, .form-submit-button input[type="submit"] {
    all: unset;
    appearance: none;
    color: white;
    -webkit-appearance: none;
    border: 1px solid blanchedalmond;
    border-radius: 12px;
    display: inline-flex;
    align-items: center;
    justify-content: center;
    padding: 2%;
    text-decoration: none;
    background-color: transparent;
    cursor: pointer;
    transition: transform 0.15s, background-color 0.15s;
    box-sizing: border-box;
}

.button:hover, .form-submit-button input[type="submit"]:hover {
    background-color: blanchedalmond;
    color: black;
    transform: scale(1.1);
}

.button:active, .form-submit-button input[type="submit"]:active {
    transform: scale(0.95);
}

/* closet piece page ______________________________________________________________________________ */
.closet-piece-top-buttons{
    display: inline-grid;
    width: 100%;
    grid-template-columns: 20% 20% 20% 20%;
    gap: 5%;
    padding-bottom: 2%;
}

.closet-piece-list-container{
    width: 95%;
    height: 85vh;
    overflow-y: scroll;
    /* add scroll colors and details here */
    display: grid;
    grid-template-columns: repeat(5, 1fr);
    grid-template-rows: 1fr;
    /* background-color: plum; */
    column-gap: 3%;
    row-gap: 10%;
}

.closet-piece-container{
    background-color: transparent;
    display: grid;
    grid-template-rows: 60% 40%;
    width: 100%;
    height: 100%;
    border-radius: 10px;
    padding: 5%;
    border: tan 2px solid; 
    margin: 2%;
}

.cpl-image {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 90%;
    height: 100%;
    overflow: hidden;
    background-color:lightgrey;
    margin: 5%;
    border-radius: 10px;
}

.cpl-image-content {
    width: 100%;
    height: 100%;
}

.cpl-image img {
    width: 80%;
    height: 100%;;
    object-fit: contain;   /* this keeps the image contained */
    display: block;
} 

.cpl-text{
    width: 90%;
    height: 90%;
    position: relative;
    align-items: center;
    /* border: blue dashed 2px;*/
    margin: 5%;
}

/* adding a piece ______________________________________________________________________________ */

.add-piece-form{
    width: 80wh;
    height: 70vh;
    display: grid;
    grid-template-columns: 33% 33% 33%;
    grid-template-rows: 80% 20%;
    background-color: tan;
    border-radius: 65px;
    padding: 10px;
}

.add-piece-form h3, h4{
    color: white;
}

.form-section{
    margin: 10px;
} 

/* applies to edit piece form too _______________ */
.add-piece-label {
    color: white;
}

.add-piece-input {
    color: tan;
    justify-self: center;
    border-radius: 65px;
    border: 1px solid white;
    padding: 10px;
    margin: 10px;
}

.add-piece-input-radio{
    border: none;
    color: white;
    list-style-type: none;
    display: flex;
    justify-self: left;
}

/* removes radio button default styling */
.add-piece-input-radio input[type="radio"], .add-piece-input-checkbox {
    accent-color: peru;
    outline: none;
}

.add-piece-input:focus {
    outline: none;            /* removes default blue */
    border: 1px solid tan;  /* new border color on focus */
    box-shadow: 0 0 5px white;
}

.add-piece-input::placeholder {
    color: tan;
}


.edit-button{
    color: tan;
    all: unset;
    appearance: none;
    -webkit-appearance: none;
    border: 1px solid blanchedalmond;
    border-radius: 12px;
    display: inline-flex;
    align-items: center;
    justify-content: center;
    padding: 2%;
    text-decoration: none;
    background-color: transparent;
    cursor: pointer;
    transition: transform 0.15s, background-color 0.15s;
    box-sizing: border-box;
}

.edit-button:hover {
    background-color: blanchedalmond;
    color: black;
    transform: scale(1.1);
}

.edit-button:active {
    transform: scale(0.95);
}

/* editing a piece ______________________________________________________________________________ */

.edit-piece-container{
    width: 100%;
    height: 80vh;
    display: grid;
    grid-template-columns: 50% 40%;
    gap: 15px;
}

.edit-piece-container h3{
    color: white;
}

.edit-piece-form{
    width: 100%;
    height: 100%;
    display: grid;
    grid-template-columns: 50% 50%;
    grid-template-rows: 60% 20% 10%;
    background-color: tan; 
    border-radius: 25px;
    margin: 10px;
    padding: 10px;
}

.edit-piece-image{
    display: flex;
    justify-content: center;
    align-content: center;
}

.edit-piece-image img{
    max-width: 80%;
    height: auto;
    object-fit: contain;
}

/* log outfit page styling ______________________________________________________________________________ */
.outfit-builder-container{
    width: 80wh;
    height: 70vh;
    display: grid;
    background-color: tan;
    border-radius: 65px;
    padding: 10px;
}

.outfit-builder-form{
    border: lightcoral 2px dashed;
    margin: 10px;
}

.selected-piece-search-js{
    border: blueviolet 2px dashed;
}

#log-outfit-date-input{
    background-color: transparent;
    border: transparent;
    color: white;
    font-size: 60px;
}

/* ____ step two ___________________________________ */

.outfit-builder-step-two{
    display: grid;
    grid-template-columns: 50% 50%;
}

.selected-piece-display{
    display: grid;
    grid-template-columns: 100%;
    grid-template-rows: 25% 25% 25% 25%;
    border: cornsilk 2px dashed;
}
/* login page ______________________________________________________________________________ */
.login-container{
    background-color: tan;
    width: 90vw;
    height: 90vh;
    border-radius: 60px;
    justify-self: center;
}

.login-container h1{
    color: white;
    justify-self: center;
    padding: 20% 0% 0% 0%;
}

.login-form{
    justify-self: center;
    align-self: center;
    justify-content: center;
}

.login-label{
    color: tan;
    justify-self: center;
    border-radius: 65px;
    border: none;
    padding: 10px;
    margin: 10px;
}

.login-label:focus{
    outline: none;            /* removes default blue */
    border: 1px solid tan;  /* new border color on focus */
    box-shadow: 0 0 5px white
}

.login-label::placeholder {
    color: tan;
}

